--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 .container{
   display: flex;
-  height: 80vw;
+  height: 80vh;
   border: 1px solid grey;
   padding: 20px;
   flex-direction: column;
